fix recaptcha css bg, and alignment

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -22,6 +22,10 @@ div {
     clear:both;
 }
 
+.recaptchatable * {
+  background-color: #fff;
+}
+
 /* FOOTER */
 #footer #content {
     text-align:center;
